Added some transitions and working on srolling effect

--- a/texasinstruments.html
+++ b/texasinstruments.html
@@ -10,10 +10,10 @@
 <body>
 
     <header class="header">
-        <div class="overlay">
+
             <div class="container">
-               <div class="description ">
-                <h1>
+                <div class="description ">
+                <h1 class="head">
                     Researcher
                 </h1>
                 </div>
@@ -30,7 +30,6 @@
                         with my future in college as a whole since they were sophomores and I was still a freshman. 
                     </p>
                 </div>
-            </div>
         </div>
         
 
