Added transitions only happen when in view

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
 
     <div class="about" id="about">
         <div class="container">
-            <h1 class="text-center">About Me</h1>
+            <div class="diamond-wrapper">
+            <h1 class="diamond myself-desc">About Me
+            </h1>
+            </div>
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <img src="images/ayandeka.jpg" class="img-fluid" >
@@ -100,7 +103,9 @@
 
     
     <div class="projects" id="projects">
-        <h1 class="text-center">Projects</h1>
+        <div class="star-wrapper">
+        <h1 class="star proj-desc">Projects</h1>
+        </div>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-12">
@@ -231,7 +236,9 @@
 
     <div class="experiences" id="experiences">
         <div class="container">
-        <h1 class="text-center">Experiences</h1>
+        <div class="rectangle-wrapper">
+        <h1 class="rectangle exp-desc">Experiences</h1>
+        </div>
             <div class="row">
                 <div class="col-md-4 col-lg-4 col-sm-12">
                     <div class="card">
@@ -290,7 +297,9 @@
 
     <div class="side-interests" id="side-interests">
         <div class="container">
-           <h1 class="text-center">Side Interests</h1>
+            <div class="rhombus-wrapper">
+            <h1 class="rhombus side-desc">Side Interests</h1>
+            </div>
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-12 item">
                     <div class="zoom1">
@@ -333,7 +342,9 @@
 
     <div class="contact" id="contact">
         <div class="container">
-           <h1 class="text-center">Make Sure To Connect With Me!</h1>
+            <div class="triangle-wrapper">
+           <h1 class="triangle conn-desc">Make Sure To Connect With Me!</h1>
+            </div>
             <div class="row">
                 <div class="col-md-4 col-lg-4 col-sm-12 item">
                     <a href="https://github.com/ayanjdeka/" target="_blank">
