Adding guitar code

--- a/guitar.html
+++ b/guitar.html
@@ -5,8 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/guitar.css">
   </head>
-  <header>
-  <body>
+  <body  style="height: 100%;">
     <div class="container">
       <svg
         id="guitar"
@@ -189,5 +188,4 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src='js/guitar.js'></script>
   </body>
-</header>
 </html>
