--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 
-<body>
+<body">
     <nav class="navbar navbar-expand-lg fixed-top ">  
         <a class="navbar-brand" href="#">Home</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">  
@@ -356,7 +356,6 @@
                     <a href="https://github.com/ayanjdeka/" target="_blank">
                         <div class="zoom">
                             <img src="images/github.png" class="img-fluid">
-                            <div class="heading" style="color:rgb(255, 0, 106); top: 50%;">Github</div>
                         </div>
                     </a>
                 </div>
@@ -364,7 +363,6 @@
                     <a href="https://instagram.com/ayan_deka10" target="_blank">
                         <div class="zoom">
                             <img src="images/instagram.png" class="img-fluid">
-                            <div class="heading" style="color:rgb(255, 0, 106); top: 50%;">Instagram</div>
                         </div>
                     </a>
                 </div>
@@ -372,17 +370,12 @@
                     <a href="https://www.linkedin.com/in/ayan-deka-ba408221b/" target="_blank">
                         <div class="zoom">
                             <img src="images/linkedin.png" class="img-fluid">
-                            <div class="heading" style="color:rgb(255, 0, 106); top: 50%;">LinkedIn</div>
                         </div>
                     </a>
                 </div>
             </div>
         </div>
-    </div>
-
-
-
-
+    </div>  
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src='js/main.js'></script>
