Changed basketball and added fonts

--- a/guitar.html
+++ b/guitar.html
@@ -4,7 +4,11 @@
     <title>Guitar Page</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/guitar.css">
+    <link href='https://fonts.googleapis.com/css?family=Allan' rel='stylesheet'>
   </head>
+
+  <div class="header" style="text-align: center; font-size: 50px; font-family: 'Allan'; color: rebeccapurple;">Play The Guitar!</div>
+
   <body  style="height: 100%;">
     <div class="container">
       <svg
