--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Ayan Deka Page</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link href='https://fonts.googleapis.com/css?family=Dekko' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Allerta Stencil' rel='stylesheet'>
 
 </head>
 
@@ -16,23 +18,23 @@
        </button>
        <div class="collapse navbar-collapse " id="navBarSupportedContent"><ul class="navbar-nav mr-4">
         <li class="nav-item">
-            <a class="nav-link" data-value="about" href="#">About</a>
+            <a class="nav-link" data-value="about" href="#" style="font-family: Dekko;">About</a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" data-value="projects" href="#">Projects</a>
+            <a class="nav-link" data-value="projects" href="#" style="font-family: Dekko;">Projects</a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" data-value="experiences" href="#">Experience</a>
+            <a class="nav-link" data-value="experiences" href="#" style="font-family: Dekko;">Experience</a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" data-value="side-interests" href="#">Side Interests</a>
+            <a class="nav-link" data-value="side-interests" href="#" style="font-family: Dekko;">Side Interests</a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" data-value="contact" href="#">Contact</a>
+            <a class="nav-link" data-value="contact" href="#" style="font-family: Dekko;">Contact</a>
         </li>
 
        </ul>
@@ -144,7 +146,7 @@
                             <div class="zoom">
                                 <img src="images/Megamania.jpg" class="img-fluid">
                                 <div style = "color: yellow;"class="heading">Megamania</div>
-                                <div style = "color: yellow; top: 52%;" class="descript">Classical Atari Game that was built using JavaFX for itsUser Interface and event handlers</div>
+                                <div style = "color: yellow; top: 52%;" class="descript">Classical Atari Game that was built using JavaFX for its User Interface and event handlers</div>
                                 <div style="color: yellow; " class="info">Click to see more!</div>
                             </div>
                         </a>
@@ -153,9 +155,9 @@
                         <a href="https://github.com/ayanjdeka/EcommerceWebsite" target="_blank">
                             <div class="zoom">
                                 <img src="images/ecommerce.jpg" class="img-fluid">
-                                <div class="heading" style="color: rgb(198, 0, 198);">Ecommerce Website</div>
-                                <div style = "color: rgb(198, 0, 198); top: 52%;" class="descript">Website that mimics an ecommerce setting implement Node.js, EJS, HTML/CSS, and Stripe API</div>
-                                <div style="color: rgb(198, 0, 198); " class="info">Click to see more!</div>
+                                <div class="heading" style="color: rgb(95, 0, 185);">Ecommerce Website</div>
+                                <div style = "color: rgb(95, 0, 185); top: 52%;" class="descript">Website that mimics an ecommerce setting implement Node.js, EJS, HTML/CSS, and Stripe API</div>
+                                <div style="color: rgb(95, 0, 185); " class="info">Click to see more!</div>
                             </div>
                         </a>
                     </div>
@@ -163,9 +165,9 @@
                         <a href="https://github.com/ayanjdeka/minesweeper" target="_blank">
                             <div class="zoom">
                                 <img src="images/minesweeper.png" class="img-fluid">
-                                <div class="heading" style="color: red;">Minesweeper</div>
-                                <div style = "color: RED; top: 52%;" class="descript">Classical game utilizing JavaSwing and JavaAWT to build the graphical interface</div>
-                                <div style="color: red; " class="info">Click to see more!</div>
+                                <div class="heading" style="color: rgb(0, 17, 255);">Minesweeper</div>
+                                <div style = "color: rgb(0, 17, 255); top: 52%;" class="descript">Classical game utilizing JavaSwing and JavaAWT to build the graphical interface</div>
+                                <div style="color: rgb(0, 17, 255); " class="info">Click to see more!</div>
                             </div>
                         </a>
                     </div>
@@ -183,9 +185,9 @@
                         <a href="https://github.com/ayanjdeka/MazeGame" target="_blank">
                             <div class="zoom">
                                 <img src="images/maze.jpg" class="img-fluid">
-                                <div style="color: orange;"class="heading">Maze</div>
-                                <div style = "color: orange; top: 52%;" class="descript">A program that reads in a textfile to create both a 2D and 3D maze with many in game features such as traps or portals</div>
-                                <div style="color: orange; " class="info">Click to see more!</div>
+                                <div style="color: red;"class="heading">Maze Game</div>
+                                <div style = "color: red; top: 52%;" class="descript">A program that reads in a textfile to create both a 2D and 3D maze with many in game features such as traps or portals</div>
+                                <div style="color: red; " class="info">Click to see more!</div>
                             </div>
                         </a>
                     </div>
@@ -241,52 +243,52 @@
         </div>
             <div class="row">
                 <div class="col-md-4 col-lg-4 col-sm-12">
-                    <div class="card">
+                    <div class="card" style="background: rgb(196,41,182); background: linear-gradient(90deg, rgba(196,41,182,1) 27%, rgba(245,186,46,1) 99%)">
                         <div class="card-img">
                             <img src="images/tinder.png" class="img-fluid">
                         </div>
                         
                         <div class="card-body">
-                        <h4 class="card-title1">Tinder</h4>
-                            <p class="card-text">                               
+                        <h4 class="card-title1" style="font-family: Allerta Stencil;">Tinder</h4>
+                            <p class="card-text"  style="font-family: Allerta Stencil;">                               
                                 Working on the Discover Android Team for this summer with Tinder
                             </p>
                         </div>
                         <div class="card-footer">
-                            <a href="tinderdescription.html" class="card-link">Read more</a>
+                            <a href="tinderdescription.html" class="card-link" style="font-family: Allerta Stencil;">Read more</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-4 col-sm-12">
-                    <div class="card">
+                    <div class="card" style="background: rgb(41,196,51); background: linear-gradient(90deg, rgba(41,196,51,1) 16%, rgba(245,132,46,1) 71%);">
                         <div class="card-img">
                             <img src="images/nobe.jpg" class="img-fluid">
                         </div>
                         
                         <div class="card-body">
-                        <h4 class="card-title">NOBE</h4>
-                            <p class="card-text">                              
+                        <h4 class="card-title" style="font-family: Allerta Stencil;">NOBE</h4>
+                            <p class="card-text" style="font-family: Allerta Stencil;">                              
                                 Worked on an ecommerce website and created a website for John Deere.
                             </p>
                         </div>
                         <div class="card-footer">
-                            <a href="nobedescription.html" class="card-link">Read more</a>
+                            <a href="nobedescription.html" class="card-link" style="font-family: Allerta Stencil;">Read more</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-4 col-sm-12">
-                    <div class="card">
+                    <div class="card" style="background: rgb(230,255,75); background: linear-gradient(90deg, rgba(230,255,75,1) 4%, rgba(255,0,0,1) 81%);">
                         <div class="card-img">
                             <img src="images/texasinstruments.jpg" class="img-fluid">
                         </div>  
                         <div class="card-body">
-                        <h4 class="card-title2">Texas Instruments</h4>
-                            <p class="card-text">                               
+                        <h4 class="card-title2" style="font-family: Allerta Stencil;">Texas Instruments</h4>
+                            <p class="card-text" style="font-family: Allerta Stencil;">                               
                                 Research employed by Texas Instruments around robotics.
                             </p>
                         </div>
                         <div class="card-footer">
-                            <a href="texasinstruments.html" class="card-link">Read more</a>
+                            <a href="texasinstruments.html" class="card-link" style="font-family: Allerta Stencil;">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -304,7 +306,7 @@
                     <a href="videogame.html">
                     <div class="zoom1">
                     <img src="images/videogames.jpg" class="img-fluid" alt="team">
-                    <div class="des" style="color: rgb(0, 247, 255);">
+                    <div class="des" style="color: rgb(0, 247, 255); font-weight: bold;">
                          <p>Video games have been an interest of mine throughout my childhood, and I have played on different consoles ranging from the Wii to the PS4</p>
                      </div>
                     </div>
@@ -314,7 +316,7 @@
                     <a href="basketball.html">
                         <div class="zoom1">
                         <img src="images/basketball.jpg" class="img-fluid" alt="team">
-                        <div style="color: rgb(0, 147, 172);" class="des">
+                        <div style="color: rgb(43, 0, 44); font-weight: bold;" class="des">
                             Basketball is another one of my favorite sport, with Michael Jordan drawing me in the sport. My favorite team is also the New York Knicks, who
                             also unfortunately suck.
                         </div>
@@ -325,7 +327,7 @@
                     <a href="guitar.html">
                         <div class="zoom1">
                         <img src="images/guitar.jpg" class="img-fluid" alt="team">
-                        <div class="des">
+                        <div class="des" style="font-weight: bold;">
                             I have been playing the guitar for around 12 years now, and play songs from many popular bands, such as Bon Jovi, AC/DC, and Guns 'N Roses. 
                         </div>
                         </div>
@@ -336,7 +338,7 @@
                     <a href="astronomy.html">
                     <div class="zoom1">
                     <img src="images/astronomy.png" class="img-fluid" alt="team">
-                     <div class="des">
+                     <div class="des" style="font-weight: bold; color: goldenrod;">
                          Astronomy has always been a very big interest of mine, as I found the concept of space and the differnet planets fascinating from a young age. 
                      </div>
                      </div>
