--- a/texasinstruments.html
+++ b/texasinstruments.html
@@ -4,6 +4,7 @@
     <title>Ayan Deka NOBE Page</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/ti.css">
+    <link href='https://fonts.googleapis.com/css?family=Nova Flat' rel='stylesheet'>
 
 </head>
 
@@ -12,12 +13,12 @@
     <header class="header">
 
             <div class="container">
-                <div class="description ">
+                <div class="description" style="font-family: Nova Flat;">
                 <h1 class="head">
                     Researcher
                 </h1>
                 </div>
-                <div class="des"> 
+                <div class="des" style="font-family: Nova Flat;"> 
                     <p>This was my first ever extra curricular activity that took place during my first in person semester in college (Spring 2021).
                         PURE stands for Promoting Undergraduate Research in Engineering, and this is a research program in which a competitive pool of 
                         300+ freshman and sophomore engineers apply for, with only around 5% of students get chosen for it. I got placed on a team with
