--- a/tinderdescription.html
+++ b/tinderdescription.html
@@ -4,6 +4,7 @@
     <title>Ayan Deka Tinder Page</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/tinder.css">
+    <link href='https://fonts.googleapis.com/css?family=Nova Flat' rel='stylesheet'>
 
 </head>
 
@@ -12,12 +13,12 @@
     <header class="header">
         <div class="overlay">
             <div class="container">
-               <div class="description ">
+               <div class="description" style="font-family: Nova Flat;">
                 <h1>
                     Software Engineer Intern at Tinder (so far)
                 </h1>
                 </div>
-                <div class="des"> 
+                <div class="des" style="font-family: Nova Flat;"> 
                     <p>So far, my experience at Tinder has been amazing. It is my first internship, so at first it was a little nerve wracking. To be more specific
                     on what I do, I am part of the Discovery team for the Android application. What this team does is that they take part in any of the events
                     that happen before the actual match happens. What I have done so far in the first month of my internship is create an online label, in which
