--- a/nobedescription.html
+++ b/nobedescription.html
@@ -4,6 +4,7 @@
     <title>Ayan Deka NOBE Page</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/nobe.css">
+    <link href='https://fonts.googleapis.com/css?family=Nova Flat' rel='stylesheet'>
 
 </head>
 
@@ -12,17 +13,17 @@
     <header class="header">
         <div class="overlay">
             <div class="container">
-               <div class="description ">
+               <div class="description" style="font-family: Nova Flat;">
                 <h1>
                     Software Developer
                 </h1>
                 </div>
-                <div class="des"> 
-                    <p>This club is a technical club that is apart of my college. It is called NOBE, which is an acronym for official title of 
-                        National Organization of Business and Engineering. This was a club in which I learned a lot of new aspects about web development.
+                <div class="des" style="font-family: Nova Flat;"> 
+                    <p>This club is a technical club that is apart of my college. It is called NOBE, which is an acronym for the official title of 
+                        National Organization of Business and Engineering.
                         I figured that this would be the perfect club for me because it gave me an opportunity to learn more about web development. I have
-                        always developed many mobile projects, and figured that I should expand my knowledge about development as a whole. The project that we did
-                        for this club is to create a website that mimics what an ecommerce website acts like. Using different technologies and languages such as
+                        always developed many mobile projects, and figured that I should expand my knowledge about overall development as a whole. The project that we did
+                        for this club was to create a website that mimics what an ecommerce website acts like. Using different technologies and languages such as
                         Node.js, HTML/CSS, EJS, and a Stripe API, I created a website that had many contents associated with it such as basketball tickets, various 
                         shopping items, and an overall shopping cart in which users can check out their purchased items and a payment system would be leveraged through
                         Stripe (all in test mode, so user data was not being tracked in any way).
