Added logic for opening the website on desktop

--- a/mobile.html
+++ b/mobile.html
@@ -2,16 +2,14 @@
 <html lang="en">
 
 <head>
-    <title>Ayan Deka Page</title>
+    <title>Mobile Page</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/mobile.css">
+    <link href='https://fonts.googleapis.com/css?family=Dekko' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Allerta Stencil' rel='stylesheet'>
 
 </head>
-
 <body>
-
-    <div class="mobile" style="text-align: center;">
-        <p>Please open this website on your desktop for the best experience!</p>
-    </div>
+<div class="demo">Please open this website on a desktop for the full experience</div>
 </body>
-
 </html>
