--- a/mobile.html
+++ b/mobile.html
@@ -10,6 +10,6 @@
 
 </head>
 <body>
-<div class="demo">Please open this website on a desktop for the full experience</div>
+<div class="demo">Please open this website on a desktop or expand the page for the full experience</div>
 </body>
 </html>
