--- a/desktop.html
+++ b/desktop.html
@@ -162,6 +162,16 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
+                        <a href="https://github.com/ayanjdeka/Financial-Models" target="_blank">
+                            <div class="zoom">
+                                <img src="images/financialmodels.jpg" class="img-fluid">
+                                <div style="color: rgb(255, 251, 0);"class="heading">Financial Models</div>
+                                <div style = "color: rgb(255, 251, 0); top: 52%;" class="descript">Quantitative modeling and computiation using Python and its various libraries</div>
+                                <div style="color: rgb(255, 251, 0); " class="info">Click to see more!</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12">
                         <a href="https://github.com/ayanjdeka/minesweeper" target="_blank">
                             <div class="zoom">
                                 <img src="images/minesweeper.png" class="img-fluid">
@@ -229,6 +239,17 @@
                                 <div class="heading" style="color:rgb(255, 0, 106);">Julia Sets</div>
                                 <div style = "color:rgb(255, 0, 106); top: 52%;" class="descript">The famous Julia Sets and its precise calculations developed in Java</div>
                                 <div style="color:rgb(255, 0, 106); " class="info">Click to see more!</div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <a href="https://github.com/ayanjdeka/WeatherApp" target="_blank">
+                            <div class="zoom">
+                                <img src="images/gpsblog.png" class="img-fluid">
+                                <div class="heading" style="color: rgb(0, 0, 86);">GPSApp</div>
+                                <div style = "color: rgb(0, 0, 86); top: 52%;" class="descript">GPS app in Android that utilizes the Location.Manager class to calculate distance and ETA from one location to another</div>
+                                <div style="color: rgb(0, 0, 86); " class="info">Click to see more!</div>
                             </div>
                         </a>
                     </div>
